config/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-action-api
  namespace: system
  labels:
    app.kubernetes.io/name: k8s-webhook-operator
    app.kubernetes.io/managed-by: kustomize
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: node-actions.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controller-manager-api
            port:
              number: 80
